# TextreamWindows

./: .gitignore  PORTING_ASSESSMENT.md  WINDOWS_TEST_CHECKLIST.md
.github/workflows/: release-windows.yml
windows-app/: package-lock.json  package.json
windows-app/src/: App.css  App.tsx
windows-app/src-tauri/: Cargo.toml  tauri.conf.json
windows-app/src-tauri/capabilities/: default.json
windows-app/src-tauri/src/: director_server.rs  documents.rs  lib.rs  main.rs  models.rs  pptx.rs  reading.rs  remote_server.rs  settings.rs  speech.rs  text.rs  updates.rs  windows_overlay.rs
windows-app/src/shared/: text.ts  types.ts
